--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
 </head>
 <body>
 <div class="typeDiv">
-	<h1 class="heading">
-		Welcome to typing speed
-	</h1>
+	<h1 class="heading">Welcome to typing speed</h1>
 	<h2 class="TypingContent"></h2>
 	<input type="text" id="typeArea">
 	<input type="button" value="Start" id="submitBtn">
 </div>
 
 
-<script sec="js/typeTest.js"></script>
+<script src="js/typeTest.js"></script>
 </body>
 </html>
