typing test project withount tring check method

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <title>Typing Test</title>
+<meta charset="UTF-8">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="typeDiv">
 	<h1 class="heading">Welcome to typing speed</h1>
 	<h2 class="TypingContent"></h2>
-	<input type="text" id="typeArea">
-	<input type="button" value="Start" id="submitBtn">
+	<textarea name="" id="typeArea" placeholder="Please click cutton for start typing test"></textarea>
+	<button type="button" value="" id="submitBtn">Start</button>
+	<div id="resultTotal"></div>
 </div>
-
-
 <script src="js/typeTest.js"></script>
 </body>
 </html>
